--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -1,7 +1,8 @@
 // top
 .top
 	padding-bottom: 56px
-	background: url(../img/svg/top-bg-right.svg) no-repeat 96% 73%,  $yellow
+	// background: url(../img/svg/top-bg-right.svg) no-repeat 96% 73%,  $yellow
+	background: $yellow
 	+r(1024)
 		background-position: 112% 73%, -9% 77%
 	+r(769)
@@ -33,7 +34,8 @@
 .price
 	position: relative
 	text-align: center
-	background: url(../img/svg/price-bg-right.svg) no-repeat 95% 35%, url(../img/svg/price-bg-left.svg) no-repeat 9% 58%, $yellow
+	// background: url(../img/svg/price-bg-right.svg) no-repeat 95% 35%, url(../img/svg/price-bg-left.svg) no-repeat 9% 58%, $yellow
+	background: $yellow
 	+r(1024)
 		background-position: 101% 35%, -3% 58%
 	+r(768)
@@ -131,7 +133,7 @@
 	padding: 188px 0 105px
 	color: $white
 	text-align: center
-	background: url(../img/svg/course-bg-left.svg) no-repeat 9% 61%, url(../img/svg/course-bg-right.svg) no-repeat 92% 53%
+	// background: url(../img/svg/course-bg-left.svg) no-repeat 9% 61%, url(../img/svg/course-bg-right.svg) no-repeat 92% 53%
 	+r(1024)
 		background-position: -8% 61%, 102% 53%
 	+r(768)
@@ -170,7 +172,8 @@
 	padding: 178px 15px 120px
 	text-align: center
 	overflow: hidden
-	background: url(../img/svg/graph-bg-left.svg) no-repeat 7% 41%, url(../img/svg/graph-bg-right.svg) no-repeat 92% 57%, $yellow
+	// background: url(../img/svg/graph-bg-left.svg) no-repeat 7% 41%, url(../img/svg/graph-bg-right.svg) no-repeat 92% 57%, $yellow
+	background: $yellow
 	+r(768)
 		background-position: -80% 41%, 162% 57%
 		padding: 117px 15px 72px
@@ -212,7 +215,7 @@
 	color: $white
 	text-align: center
 	overflow: hidden
-	background: url(../img/svg/textbook-bg-left.svg) no-repeat 7% 10%, url(../img/svg/textbook-bg-right.svg) no-repeat 93% 11%
+	// background: url(../img/svg/textbook-bg-left.svg) no-repeat 7% 10%, url(../img/svg/textbook-bg-right.svg) no-repeat 93% 11%
 	+r(1024)
 		background-position: -17% 10%, 108% 13%
 	+r(768)
