--- a/src/sass/_block.sass
+++ b/src/sass/_block.sass
@@ -250,6 +250,7 @@
 	background-size: cover
 	background-repeat: no-repeat
 	background-position: 50% 0
+	background-attachment: fixed
 	z-index: 2
 	.title-big
 		& + p
