--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -16,8 +16,12 @@
 		z-index: 2
 		+r(768)
 			margin: 13.2% auto 0
+		+rh(775)
+			margin-top: -.20%
 		.video
 			margin-top: 60px
+			+rh(775)
+				margin-top: 6px
 
 // video
 .video
