--- a/src/partials/header-home.html
+++ b/src/partials/header-home.html
@@ -51,19 +51,21 @@
 		</div>
 		<!-- logo -->
 		<a href="#" class="logo"></a>
-		<!-- menu -->
-		<div class="menu js-menu">
-			<button class="menu__btn js-btn-menu">
-				<span>MENU</span>
-			</button>
-			<ul class="menu__list">
-				<li><a href="#">Цена</a></li>
-				<li class="is-active"><a href="#">Курс</a></li>
-				<li><a href="#">График</a></li>
-				<li><a href="#">Учебник</a></li>
-				<li><a href="#">Офис</a></li>
-				<li><a href="#">Контакты</a></li>
-			</ul>
+		<div class="header__menu">
+			<!-- menu -->
+			<div class="menu js-menu">
+				<button class="menu__btn js-btn-menu">
+					<span>MENU</span>
+				</button>
+				<ul class="menu__list">
+					<li><a href="#">Цена</a></li>
+					<li class="is-active"><a href="#">Курс</a></li>
+					<li><a href="#">График</a></li>
+					<li><a href="#">Учебник</a></li>
+					<li><a href="#">Офис</a></li>
+					<li><a href="#">Контакты</a></li>
+				</ul>
+			</div>
 		</div>
 	</div>
 </header>
