--- a/src/sass/lib/_mixins.sass
+++ b/src/sass/lib/_mixins.sass
@@ -14,6 +14,10 @@
 	@media only screen and (max-height: $height + "px")
 		@content
 
+=rmh($height)
+	@media only screen and (min-height: $height + "px")
+		@content
+
 =clr
 	&:after
 		content: " "
