--- a/src/sass/_paralax.sass
+++ b/src/sass/_paralax.sass
@@ -11,13 +11,13 @@
 	&__left
 		float: left
 		position: relative
-		top: -40%
+		top: 0
 		left: 5%
 		transition: transform .8s
 	&__right
 		float: right
 		position: relative
-		top: -40%
+		top: 0
 		right: 5%
 		transition: transform .8s
 	&__svg
