--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -3,10 +3,8 @@
 	padding-bottom: 56px
 	// background: url(../img/svg/top-bg-right.svg) no-repeat 96% 73%,  $yellow
 	background: $yellow
-	+r(1024)
-		background-position: 112% 73%, -9% 77%
-	+r(769)
-		background-position: 756% 73%, -150% 77%
+	+r(768)
+		overflow: hidden
 	&__in
 		position: relative
 		margin: 4.2% auto 0
@@ -16,12 +14,18 @@
 		z-index: 2
 		+r(768)
 			margin: 13.2% auto 0
-		+rh(775)
-			margin-top: -.20%
+		+r(1400)
+			+rh(775)
+				margin-top: -.20%
+			+r(1024)
+				margin: 13.2% auto 0
 		.video
 			margin-top: 60px
-			+rh(775)
-				margin-top: 6px
+			+r(1024)
+				margin-top: 60px 
+			+r(1400)
+				+rh(775)
+					margin-top: 6px
 
 // video
 .video
@@ -40,10 +44,10 @@
 	text-align: center
 	// background: url(../img/svg/price-bg-right.svg) no-repeat 95% 35%, url(../img/svg/price-bg-left.svg) no-repeat 9% 58%, $yellow
 	background: $yellow
-	+r(1024)
-		background-position: 101% 35%, -3% 58%
-	+r(768)
-		background-position: 201% 35%, -150% 58%
+	// +r(1024)
+	// 	background-position: 101% 35%, -3% 58%
+	// +r(768)
+	// 	background-position: 201% 35%, -150% 58%
 	&:before
 		position: absolute
 		content: ''
@@ -94,13 +98,14 @@
 		width: 220px
 		text-align: center
 		+r(768)
-			width: 160px
+			width: 147px
 			text-align: left
 	.cost
 		padding-left: 22px
 		width: 105px
 		+r(768)
 			padding-left: 0
+			width: auto
 	&__in
 		position: relative
 		padding: 160px 15px
@@ -119,6 +124,7 @@
 		+r(768)
 			margin-top: 15px
 			padding-left: 60px
+			text-align: left
 	&__btn
 		margin-top: 44px
 		+r(768)
@@ -138,11 +144,11 @@
 	color: $white
 	text-align: center
 	// background: url(../img/svg/course-bg-left.svg) no-repeat 9% 61%, url(../img/svg/course-bg-right.svg) no-repeat 92% 53%
-	+r(1024)
-		background-position: -8% 61%, 102% 53%
+	// +r(1024)
+	// 	background-position: -8% 61%, 102% 53%
 	+r(768)
 		padding: 116px 0 71px
-		background-position: -96% 61%, 192% 53%
+		// background-position: -96% 61%, 192% 53%
 	.title
 		margin-bottom: 80px
 		+r(766)
@@ -179,7 +185,7 @@
 	// background: url(../img/svg/graph-bg-left.svg) no-repeat 7% 41%, url(../img/svg/graph-bg-right.svg) no-repeat 92% 57%, $yellow
 	background: $yellow
 	+r(768)
-		background-position: -80% 41%, 162% 57%
+		// background-position: -80% 41%, 162% 57%
 		padding: 117px 15px 72px
 	&:before,
 	&:after
@@ -220,8 +226,8 @@
 	text-align: center
 	overflow: hidden
 	// background: url(../img/svg/textbook-bg-left.svg) no-repeat 7% 10%, url(../img/svg/textbook-bg-right.svg) no-repeat 93% 11%
-	+r(1024)
-		background-position: -17% 10%, 108% 13%
+	// +r(1024)
+	// 	background-position: -17% 10%, 108% 13%
 	+r(768)
 		padding: 120px 0 52px
 	&:before
