--- a/src/sass/_paralax.sass
+++ b/src/sass/_paralax.sass
@@ -8,17 +8,19 @@
 	z-index: 1
 	overflow: hidden
 	+clr
+	+r(768)
+		display: none
 	&__left
 		float: left
 		position: relative
 		top: 0
-		left: 5%
+		left: 0
 		transition: transform .8s
 	&__right
 		float: right
 		position: relative
 		top: 0
-		right: 5%
+		right: 0%
 		transition: transform .8s
 	&__svg
 		position: relative
@@ -34,32 +36,8 @@
 			animation-duration: 4.8s
 			@for $i from 1 through 29
 				&:nth-child(#{$i}) 
-					// top: random(200px) + 290px
 					animation-delay: $animation-delay
 					$animation-delay: $animation-delay + .2s
-					// animation-duration: $animation-duration
-					// $animation-duration: $animation-duration + .5s
-		// &:nth-child(2)
-		// 	left: 9%
-		// 	top: 353px
-		// &:nth-child(3)
-		// 	left: 25%
-		// 	top: 434px
-		// &:nth-child(4)
-		// 	left: 13%
-		// 	top: 533px
-		// &:nth-child(5)
-		// 	left: 8%
-		// 	top: 605px
-		// &:nth-child(6)
-		// 	left: 22%
-		// 	top: 680px
-		// $top: 0px
-
-		// @for $i from 1 through 6
-		// 	&:nth-child(#{$i}) 
-		// 		top: random(200px) + 290px
-		// 		left: random(400px) - 100px
 
 @keyframes rotate
 	0%
@@ -70,8 +48,12 @@
 
 @keyframes translate
 	0%
+		transform: translateY(0)
+	25%
 		transform: translateY(5%)
 	50%
 		transform: translateY(0)
+	75%
+		transform: translateY(5%)
 	100%
-		transform: translateY(8%)
+		transform: translateY(0)
