--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -30,6 +30,7 @@
 				+arr(640,320,$white,b)
 	&.is-init
 		overflow: initial
+		z-index: 4
 	&__menu
 		float: right
 		height: 46px
@@ -278,6 +279,8 @@
 		cursor: pointer
 		user-select: none
 		display: block
+	input[name="password"]
+		text-align: center
 
 // play
 .play
