--- a/src/sass/_popup.sass
+++ b/src/sass/_popup.sass
@@ -75,5 +75,9 @@
 			display: inline-block
 			&:hover
 				border-color: transparent
+	&__row
+		margin-top: 50px
+		&:first-child
+			margin-top: 0
 	// &__wrap
 	// 	width: 350px
