--- a/src/sass/lib/_svgfont.sass
+++ b/src/sass/lib/_svgfont.sass
@@ -18,6 +18,7 @@ $icon-slider-prev: "\EA0A"
 $icon-close: "\EA0B"
 $icon-phone: "\EA0C"
 $icon-key: "\EA0D"
+$icon-error: "\EA0E"
 
 
 %icon
@@ -60,3 +61,5 @@ $icon-key: "\EA0D"
 	content: $icon-phone
 .icon-key:before
 	content: $icon-key
+.icon-error:before
+	content: $icon-error
