--- a/src/partials/header-popup-error.html
+++ b/src/partials/header-popup-error.html
@@ -1,5 +1,5 @@
 <!-- header -->
-<header class="header is-home js-header">
+<header class="header is-home js-header is-init">
 	<div class="header__in">
 		<div class="header__left">
 			<!-- lang -->
@@ -13,19 +13,27 @@
 					<i class="icon icon-user"></i>
 				</button>
 				<!-- popup --> 
-				<div class="popup js-popup">
+				<div class="popup js-popup is-active">
 					<div class="popup__in">
 						<button class="popup__close js-popup-close"><i class="icon icon-close"></i></button>
 						<div class="popup__wrap">
 							<h3 class="popup__title">Вход <br>в личный кабинет </h3>
 							<form action="" class="popup__form" id="js-popup-form">
 								<div class="field">
+									<div class="error-text is-active">
+										<i class="icon icon-error"></i>
+										<span>Неверный номер</span>
+									</div>
 									<label for="phone" class="field__label">
 										<i class="icon icon-phone"></i>
 									</label>
 									<input type="text" name="phone" id="phone" class="input js-input-phone" data-validation="required" data-validation-length="min40">
 								</div>
 								<div class="field">
+									<div class="error-text is-active">
+										<i class="icon icon-error"></i>
+										<span>Неверный пароль</span>
+									</div>
 									<label for="password" class="field__label">
 										<i class="icon icon-key"></i>
 									</label>
