--- a/src/sass/_block.sass
+++ b/src/sass/_block.sass
@@ -184,7 +184,12 @@
 	letter-spacing: .14em
 	+r(768)
 		font-size: 28px
-	
+
+.title-large
+	+rb
+	font-size: 57px
+	line-height: 1.1
+
 .title-big
 	font-size: 72px
 	line-height: 1.25
@@ -205,6 +210,11 @@ h1,
 	letter-spacing: .05em
 	+r(768)
 		font-size: 18px
+
+.title-little
+	font-size: 18px
+	+lb
+	line-height: 1.2
 
 // mouse
 .mouse
