--- a/src/sass/lib/_svgfont.sass
+++ b/src/sass/lib/_svgfont.sass
@@ -19,6 +19,7 @@ $icon-close: "\EA0B"
 $icon-phone: "\EA0C"
 $icon-key: "\EA0D"
 $icon-error: "\EA0E"
+$icon-logout: "\EA0F"
 
 
 %icon
@@ -63,3 +64,5 @@ $icon-error: "\EA0E"
 	content: $icon-key
 .icon-error:before
 	content: $icon-error
+.icon-logout:before
+	content: $icon-logout
