--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -40,11 +40,16 @@
 	.popup
 		&__in
 			min-width: 90%
+			height: 70%
 			+r(768)
 				width: 90%
 				padding: 20px
 			iframe
-				height: 280px !important
+				height: 100% !important
+		&__wrap
+			height: 100%
+			& > div
+				height: 100%
 
 // price
 .price
