--- a/src/sass/_popup.sass
+++ b/src/sass/_popup.sass
@@ -34,6 +34,8 @@
 		transform: translate3d(0,0,0)
 		transition: transform .4s
 		transform: scale(0.4)
+		+r(1024)
+			margin-top: 50px
 	&__close
 		position: absolute
 		top: -38px
