--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -1,33 +1,7 @@
 // header
 .header
 	position: relative
-	padding: 90px 0 320px
-	z-index: 3
 	+clr
-	+r(768)
-		padding: 0 0 320px
-	&.is-home
-		&:before
-			position: absolute
-			content: ''
-			top: 0
-			left: 50%
-			margin: 0 0 0 -462px
-			// width: 650px 
-			// height: 650px
-			// +rotate(45)
-			// background: $white
-			+arr(924,458,$white,b)
-			+r(1024)
-				margin: 0 0 0 -421px
-				+arr(842,423,$white,b)
-			+r(950)
-				margin: 0 0 0 -371px
-				+arr(742,373,$white,b)
-			+r(768)
-				top: 50px
-				margin: 0 0 0 -320px
-				+arr(640,320,$white,b)
 	&.is-init
 		overflow: initial
 		z-index: 4
@@ -62,10 +36,6 @@
 	&__in 
 		position: relative
 		@extend %in 
-		+r(768)
-			padding: 13px 15px 10px
-			color: $white
-			background: $black
 	&__left
 		float: left
 	.logo
@@ -77,6 +47,8 @@
 		+r(768)
 			top: 96px
 			margin-left: -68px
+	.logout
+		float: right
 
 // menu
 .menu
