--- a/src/partials/sidebar-teacher.html
+++ b/src/partials/sidebar-teacher.html
@@ -4,9 +4,9 @@
 	<a href="#" class="logo is-teacher"></a>
 	<!-- nav -->
 	<nav class="nav">
-		<li class="is-active"><a href="#">Дата</a></li>
-		<li><a href="#">Групи</a></li>
-		<li><a href="#">Додаткові заняття</a></li>
-		<li><a href="#">Консультації</a></li>
+		<li class="is-active"><a href="#"><span>Дата</span></a></li>
+		<li><a href="#"><span>Групи</span></a></li>
+		<li><a href="#"><span>Додаткові заняття</span></a></li>
+		<li><a href="#"><span>Консультації</span></a></li>
 	</nav>
 </div>
