--- a/src/partials/header_teacher.html
+++ b/src/partials/header_teacher.html
@@ -1,12 +1,10 @@
 <!-- header -->
 <header class="header">
-	<div class="header__in">
-		<!-- logout -->
-		<div class="logout">
-			<div class="logout__link">
-				<span>Розенко Влада</span>
-				<i class="icon icon-logout"></i>
-			</div>
-		</div>
+	<!-- logout -->
+	<div class="logout">
+		<a href="#" class="logout__link">
+			<span class="user-name">Розе`нко Влада</span>
+			<i class="icon icon-logout"></i>
+		</a>
 	</div>
 </header>
