--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -265,9 +265,25 @@
 		background: transparent
 		display: inline-block
 
-// logo
-.logo
-	transform: translate3d(0,0,0)
-	+svg(logo,158,172)
-	+r(768)
-		+svg(logo,117,128)
+// logout
+.logout
+	+rb
+	font-size: 18px
+	&:hover
+		.logout__link
+			.user-name
+				border-color: $black
+	&__link
+		display: block
+	.user-name
+		margin-right: 10px
+		line-height: 1.3
+		letter-spacing: -0.03em
+		vertical-align: middle
+		transition: border-color .2s
+		border-bottom: 1px solid transparent
+		display: inline-block
+	.icon
+		font-size: 28px
+		vertical-align: middle
+		display: inline-block
