--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -2,4 +2,11 @@ $white: #fff
 $red: #d84d00
 $yellow: #ffe94a
 $dark-gray: #2a2a2a
+$light-gray: #ddd
 $black: #000
+$light-black: #1d1d1b
+
+$c_hour: #706f6f
+$c_visiting: $light-black
+
+$bd-table: #dadada
