--- a/src/partials/header-home.html
+++ b/src/partials/header-home.html
@@ -42,7 +42,7 @@
 									<button class="btn" type="submit">ВОЙТИ</button>
 								</div>
 								<div class="popup__chenge">
-									<a href="#">Изменить пароль</a>
+									<a href="#">Забыл пароль</a>
 								</div>
 							</form>
 						</div>
@@ -58,13 +58,13 @@
 				<button class="menu__btn js-btn-menu">
 					<span>MENU</span>
 				</button>
-				<ul class="menu__list">
-					<li><a href="#">Цена</a></li>
-					<li class="is-active"><a href="#">Курс</a></li>
-					<li><a href="#">График</a></li>
-					<li><a href="#">Учебник</a></li>
-					<li><a href="#">Офис</a></li>
-					<li><a href="#">Контакты</a></li>
+				<ul class="menu__list js-menu-list">
+					<li><a href="#price">Цена</a></li>
+					<li class="is-active"><a href="#course">Курс</a></li>
+					<li><a href="#graph">График</a></li>
+					<li><a href="#textbook">Учебник</a></li>
+					<li><a href="#office">Офис</a></li>
+					<li><a href="#contacts">Контакты</a></li>
 				</ul>
 			</div>
 		</div>
