--- a/src/sass/_block.sass
+++ b/src/sass/_block.sass
@@ -288,6 +288,11 @@ h1,
 	background-position: 50% 0
 	background-attachment: fixed
 	z-index: 2
+	background-color: $bg-pic
+	+r(480)
+		min-height: 382px
+		height: auto
+		background-image: none !important
 	.title-big
 		& + p
 			margin-top: 7px
