--- a/src/sass/_footer.sass
+++ b/src/sass/_footer.sass
@@ -15,6 +15,17 @@
 			padding-left: 85px
 			padding-right: 50px
 			font-size: 10px
+		+r(480)
+			padding: 0 15px
+			text-align: center
+	.copy,
+	.dev
+		+r(480)
+			float: none
+			margin-top: 10px
+			width: 100%
+			&:first-child
+				margin-top: 0
 
 // copy
 .copy
