--- a/src/sass/_paralax.sass
+++ b/src/sass/_paralax.sass
@@ -27,7 +27,7 @@
 		animation: translate 40s infinite normal linear
 		g
 			transform: translate3(0,0,0)
-			transform-origin: 50% 50%
+			transform-origin: center center
 			// animation: rotate 7.8s infinite normal linear
 			animation-name: rotate
 			animation-timing-function: linear
