--- a/src/sass/_paralax.sass
+++ b/src/sass/_paralax.sass
@@ -15,17 +15,30 @@
 		position: relative
 		top: 0
 		left: 0
+		width: 318px
+		height: 100%
 		transition: transform .8s
+		.paralax__svg
+			width: 318px
 	&__right
 		float: right
 		position: relative
 		top: 0
 		right: 0%
+		width: 350px
+		height: 100%
 		transition: transform .8s
+		.paralax__svg
+			width: 350px
+	&__rotate
+		height: 100%
+		min-height: 100%
+		+rotate(180)
 	&__svg
 		position: relative
+		min-height: 100%
 		animation: translate 40s infinite normal linear
-		g
+		svg
 			transform: translate3(0,0,0)
 			transform-origin: center center
 			// animation: rotate 7.8s infinite normal linear
@@ -38,6 +51,52 @@
 				&:nth-child(#{$i}) 
 					animation-delay: $animation-delay
 					$animation-delay: $animation-delay + .2s
+	[class^="svg-"]
+		position: absolute
+	.svg-1
+		top: 0
+		right: 28px
+	.svg-2
+		top: 59px
+		left: 51px
+	.svg-3
+		top: 140px
+		right: 22px
+	.svg-4
+		top: 240px
+		left: 100px
+	.svg-5
+		top: 310px
+		left: 35px
+	.svg-6
+		top: 385px
+		right: 75px
+	.svg-7
+		top: 558px
+		right: 98px
+	.svg-8
+		top: 734px
+		right: 128px
+	.svg-9
+		top: 834px
+		left: 228px
+	.svg-10
+		top: 914px
+		left: 38px
+	.svg-11
+		top: 994px
+		left: 97px
+	.svg-12
+		top: 1254px
+		left: 197px
+	.svg-13
+		top: 1414px
+		left: 80px
+	.svg-14
+		top: 1714px
+		left: 80px
+
+		
 
 @keyframes rotate
 	0%
