all teacher desctop page

--- a/src/sass/_block.sass
+++ b/src/sass/_block.sass
@@ -432,6 +432,9 @@ h1,
 				+lbd
 				text-align: right
 				line-height: 37px
+	&.is-consult
+		.table__row
+			line-height: 45px
 	&__row
 		position: relative
 		padding-left: 15px
