--- a/src/sass/lib/_svgfont.sass
+++ b/src/sass/lib/_svgfont.sass
@@ -20,6 +20,7 @@ $icon-phone: "\EA0C"
 $icon-key: "\EA0D"
 $icon-error: "\EA0E"
 $icon-logout: "\EA0F"
+$icon-calenadar-left: "\EA10"
 
 
 %icon
@@ -66,3 +67,5 @@ $icon-logout: "\EA0F"
 	content: $icon-error
 .icon-logout:before
 	content: $icon-logout
+.icon-calenadar-left:before
+	content: $icon-calenadar-left
