--- a/src/sass/_ui.sass
+++ b/src/sass/_ui.sass
@@ -18,6 +18,7 @@ div.ui-datepicker
 		cursor: pointer
 		&:hover
 			border: none
+			background: transparent
 	.ui-datepicker-prev
 		left: auto
 		right: 27px
