--- a/src/sass/_teacher.sass
+++ b/src/sass/_teacher.sass
@@ -19,8 +19,8 @@ body.is-teacher
 		max-width: 1150px
 	.l
 		padding-bottom: 40px
-	.l-col2
-		padding-top: 40px
+	.stat
+		margin-top: 40px
 
 // sidebar
 .sidebar
@@ -129,3 +129,15 @@ body.is-teacher
 	margin: 50px 0 55px
 	.ui-datepicker-inline
 		margin: 0 auto
+
+// accord-groups
+.accord-groups
+	margin-top: 50px
+
+.point
+	font-size: 14px
+	color: $c_point
+	+lb
+	&.is-filled
+		color: $black
+		text-transform: uppercase
