--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -8,6 +8,9 @@ $light-black: #1d1d1b
 
 $c_hour: #706f6f
 $c_visiting: $light-black
+$c_tab: $c_hour
+$c_point: #949493
 
 $bd-table: #dadada
 $bg-pic: #4c4c4c
+$bg-tab: #c6c6c6
