--- a/src/sass/_teacher.sass
+++ b/src/sass/_teacher.sass
@@ -19,6 +19,22 @@ body.is-teacher
 		max-width: 1150px
 	.l
 		padding-bottom: 40px
+	.l__center
+		margin-top: 50px
+		.title-square
+			margin-top: 55px
+			& + .date
+				margin-top: -12px
+				line-height: 1
+			&:first-child
+				margin-top: 0
+		.date
+			text-align: right
+			display: block
+		.accord
+			margin-top: 20px
+			&:first-child
+				margin-top: 0
 	.stat
 		margin-top: 40px
 
