--- a/src/sass/_block.sass
+++ b/src/sass/_block.sass
@@ -198,6 +198,8 @@
 .label
 	margin-bottom: 5px
 	+lb
+	cursor: pointer
+	user-select: none
 	display: block
 
 // forgot
@@ -240,6 +242,11 @@ h1,
 	+r(768)
 		font-size: 24px
 
+.title-medium
+	font-size: 29px
+	line-height: 1.3
+	+lb
+
 .title-small
 	font-size: 24px
 	+lb
@@ -251,6 +258,10 @@ h1,
 	font-size: 18px
 	+lb
 	line-height: 1.2
+
+.title-petty
+	font-size: 16px
+	+lb
 
 .title-square
 	position: relative
