--- a/src/sass/_teacher.sass
+++ b/src/sass/_teacher.sass
@@ -150,6 +150,7 @@ body.is-teacher
 .accord-groups
 	margin-top: 50px
 
+// poin
 .point
 	font-size: 14px
 	color: $c_point
@@ -157,3 +158,7 @@ body.is-teacher
 	&.is-filled
 		color: $black
 		text-transform: uppercase
+
+// block-inf
+.block-inf
+	margin-top: 10px
