add adaptive all

--- a/src/partials/sidebar-teacher.html
+++ b/src/partials/sidebar-teacher.html
@@ -1,12 +1,21 @@
 <!-- sidebar -->
-<div class="sidebar">
+<div class="sidebar js-sidebar">
 	<!-- logo -->
 	<a href="#" class="logo is-teacher"></a>
-	<!-- nav -->
-	<nav class="nav">
-		<li class="is-active"><a href="#"><span>Дата</span></a></li>
-		<li><a href="#"><span>Групи</span></a></li>
-		<li><a href="#"><span>Додаткові заняття</span></a></li>
-		<li><a href="#"><span>Консультації</span></a></li>
-	</nav>
+	<button class="nav-btn js-open-nav" type="button"><span></span></button>
+	<div class="nav-block js-nav">
+		<!-- nav -->
+		<nav class="nav">
+			<li class="is-active"><a href="#"><span>Дата</span></a></li>
+			<li><a href="#"><span>Групи</span></a></li>
+			<li><a href="#"><span>Додаткові заняття</span></a></li>
+			<li><a href="#"><span>Консультації</span></a></li>
+		</nav>
+		<!-- outlet -->
+		<div class="outlet">
+			<a href="#" class="outlet__link"><span>Вихід</span></a>
+			<a href="#" class="outlet__link"><span>Змінити пароль</span></a>
+		</div>
+	</div>
+	
 </div>
