--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -3,8 +3,11 @@
 	position: relative
 	+clr
 	&.is-init
+		position: fixed
 		overflow: initial
 		z-index: 5
+		left: 0
+		right: 0
 	&__menu
 		float: right
 		height: 46px
