--- a/src/sass/_popup.sass
+++ b/src/sass/_popup.sass
@@ -38,6 +38,8 @@
 		transform: scale(0.4)
 		+r(1024)
 			margin-top: 50px
+		+r(768)
+			padding: 45px 40px 40px
 	&__close
 		position: absolute
 		top: -38px
@@ -88,11 +90,15 @@
 	&__progress
 		padding: 70px 25px 0
 		text-align: left
+		+r(768)
+			padding: 85px 0 0
 	&__indexes
 		position: absolute
 		top: 0
 		left: 100px
 		+clr
+		+r(768)
+			left: 45px
 		.group-name
 			float: left
 			padding: 40px 25px 10px
