--- a/src/partials/header_student.html
+++ b/src/partials/header_student.html
@@ -1,5 +1,6 @@
 <!-- header -->
-<header class="header">
+<header class="header js-header">
+	<div class="header__bg js-header-bg" style="background-image: url('/img/header_bg.png')"></div>
 	<div class="header__in">
 		<div class="header__row">
 			<!-- stud-name -->
@@ -10,10 +11,10 @@
 			<!-- logout -->
 			<div class="logout">
 				<!-- lang -->
-				<div class="lang">
+				<ul class="lang">
 					<li><a href="#">en</a></li>
-					<li class="ua"><a href="#">ua</a></li>
-				</div>
+					<li class="is-active"><a href="#">ua</a></li>
+				</ul>
 				<a href="#" class="logout__link">
 					<i class="icon icon-logout"></i>
 				</a>
@@ -22,7 +23,7 @@
 		<div class="header__row">
 			<!-- steps -->
 			<div class="steps">
-				<div class="step">
+				<div class="step is-active">
 					<date class="date">з 5.06.15 по 5.09.15</date>
 					<div class="progress">
 						<div class="progress__in" style="width:40%;"></div>
@@ -35,7 +36,7 @@
 				<div class="step">
 					<date class="date">з 5.06.15 по 5.09.15</date>
 					<div class="progress">
-						<div class="progress__in" style="width:40%;"></div>
+						<div class="progress__in" style="width:0;"></div>
 					</div>
 					<div class="step__bot">
 						<span>Степ 2</span> 
@@ -45,7 +46,7 @@
 				<div class="step">
 					<date class="date">з 5.06.15 по 5.09.15</date>
 					<div class="progress">
-						<div class="progress__in" style="width:40%;"></div>
+						<div class="progress__in" style="width:0;"></div>
 					</div>
 					<div class="step__bot">
 						<span>Степ 3</span> 
@@ -55,7 +56,7 @@
 				<div class="step">
 					<date class="date">з 5.06.15 по 5.09.15</date>
 					<div class="progress">
-						<div class="progress__in" style="width:40%;"></div>
+						<div class="progress__in" style="width:0;"></div>
 					</div>
 					<div class="step__bot">
 						<span>Степ 4</span> 
