--- a/src/sass/lib/_svgfont.sass
+++ b/src/sass/lib/_svgfont.sass
@@ -21,6 +21,7 @@ $icon-key: "\EA0D"
 $icon-error: "\EA0E"
 $icon-logout: "\EA0F"
 $icon-calenadar-left: "\EA10"
+$icon-arr-right: "\EA11"
 
 
 %icon
@@ -69,3 +70,5 @@ $icon-calenadar-left: "\EA10"
 	content: $icon-logout
 .icon-calenadar-left:before
 	content: $icon-calenadar-left
+.icon-arr-right:before
+	content: $icon-arr-right
