--- a/src/sass/_block.sass
+++ b/src/sass/_block.sass
@@ -1,9 +1,84 @@
 // out
 .out
-	padding-bottom: 54px
+	padding-bottom: 64px
 	min-height: 100%
 	height: 100%
 	height: auto
+
+// leftbar
+.rightbar
+	padding-top: 40px
+	height: 100%
+	width: 89%
+	vertical-align: top
+	display: table-cell
+	+r(1280)
+		width: calc(100% - 140px)
+	+r(960)
+		padding: 30px 0
+		width: 100%
+		display: block
+	.l,
+	.header
+		margin: 0 auto
+		padding: 0 88px 0 103px
+		max-width: 1150px
+		+r(1024)
+			padding: 0 30px
+		+r(768)
+			padding: 0 20px
+	.l
+		padding-bottom: 40px
+	.l__center
+		margin-top: 50px
+		.title-square
+			margin-top: 55px
+			& + .date
+				margin-top: -12px
+				line-height: 1
+			&:first-child
+				margin-top: 0
+		.date
+			text-align: right
+			display: block
+		.accord
+			margin-top: 20px
+			&:first-child
+				margin-top: 0
+	.stat
+		margin-top: 40px
+	.header
+		+r(960)
+			display: none
+	.l-col1,
+	.l-col2
+		+r(960)
+			padding-left: 0
+			width: 100%
+
+// sidebar
+.sidebar
+	position: relative
+	padding: 68px 20px 10px
+	width: 11%
+	height: 100%
+	color: $white
+	text-align: center
+	vertical-align: top
+	display: table-cell
+	background: $dark-gray
+	+clr
+	+r(1280)
+		width: 140px
+	+r(960)
+		padding: 12px 45px
+		width: 100%
+		height: 50px
+		display: block
+	.nav
+		margin-top: 126px
+		+r(960)
+			margin: 80px 0 72px
 
 // l
 .l
@@ -79,6 +154,7 @@
 	border-radius: 4px
 	letter-spacing: .1em
 	line-height: 1.3
+	text-align: center
 	border: 2px solid $black
 	background: $black
 	display: inline-block
@@ -96,6 +172,18 @@
 		background: $red
 		&:hover
 			color: $red
+	&_bord
+		color: $black
+		background: transparent
+		&:hover
+			color: $white
+			background: $black
+	&_r6
+		border-radius: 6px
+	&_little
+		padding: 10px 12px 
+		font-size: 9px
+		line-height: 1.2
 	&_small
 		padding: 6px 17px
 
