--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -5,6 +5,7 @@ $dark-gray: #2a2a2a
 $light-gray: #ddd
 $black: #000
 $light-black: #1d1d1b
+$yellow-brown: #ffe6a9
 
 $c_hour: #706f6f
 $c_visiting: $light-black
